--- a/central-auth-service/authapi/src/main/resources/locale/messages.properties
+++ b/central-auth-service/authapi/src/main/resources/locale/messages.properties
@@ -26,6 +26,7 @@ error_password_pattern=Password Pattern Fails.
 error_email_not_exist=Email Not Exist.
 error_exception_unprocessable=Unprocessable Entity.
 error_wrong_password=Wrong Old Password.
+success_change_password=Successfully Change Password.
 success_reset_password=Successfully Reset Password.
 rejected_user_deleted=Successfully rejected User is deleted.
 error_delete_user=Unable to delete users.
