DTS-34986-AuthNAuth-upgrade Clean up

--- a/central-auth-service/authapi/src/main/resources/locale/messages.properties
+++ b/central-auth-service/authapi/src/main/resources/locale/messages.properties
@@ -2,6 +2,7 @@ success_apiKey_generated=API Key token is generated Successfully.
 success_apiKey_updated=API Key token Is updated , All previously generated tokens will expiry.
 error_apiKey_generated=Error while Creating token.
 error_invalid_user=Please provide a valid Username.
+error_invalid_user_email=Please provide a valid email.
 error_invalid_permission=Logged Username Not Access to Generate token , Please provide a valid Username.
 success_valid_token=Token is valid for given User.
 success_delete_token=Token is deleted for given User.
