DTS-34986-AuthNAuth-upgrade-final Add GSO changes

--- a/central-auth-service/authapi/src/main/resources/locale/messages.properties
+++ b/central-auth-service/authapi/src/main/resources/locale/messages.properties
@@ -12,6 +12,7 @@ error_mail_sent=Error Sending the mail message to topic and the exception is.
 error_unauthorized_user=Unauthorized User.
 success_sent_approval=User Verification Request mail sent successfully.
 error_register_password=Cannot complete the registration process, Try with different password.
+error_register_username=Cannot complete the registration process, Try with different username.
 error_register_again=Unable to register try again later.
 success_pending_approval=Your Approval Is Pending.
 success_request_approve=Request Approved Successfully.
